// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageOverlay Can display 1`] = `
<PageOverlay
  onClose={[Function]}
>
  <div
    className="page-overlay"
  >
    <div
      className="page-overlay-content"
    >
      test
      <div
        className="page-overlay-close"
        onClick={[Function]}
        role="presentation"
      >
        ×
      </div>
    </div>
  </div>
</PageOverlay>
`;

exports[`PageOverlay Can make visible 1`] = `
<PageOverlay
  onClose={[Function]}
  visible={true}
>
  <div
    className="page-overlay visible"
  >
    <div
      className="page-overlay-content"
    >
      test
      <div
        className="page-overlay-close"
        onClick={[Function]}
        role="presentation"
      >
        ×
      </div>
    </div>
  </div>
</PageOverlay>
`;
